# snippets

./: README.md
reinforcement-learning/hpo/: kill_all_screens.sh  optimize.py  sample_for_hpo.py  start_dashboard.py  start_dashboard.sh  start_hpo_in_screens.sh
templates/empty_python_project/: .gitignore  README.md  pyproject.toml
templates/empty_python_project/src/project_name/: some_python_code.py
templates/empty_python_project/src/project_name/utils/: exeptions.py
utils/git /: add_ssh_keys.sh
utils/profiling/: profile_decorator.py  profile_with_gprof2dot.sh
web_hosting/: how_to_host.md  nginx.conf
